--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
     <script type="text/javascript">
         var options = {sourceUrl: "talk.md",
-                       highlightStyle: "tomorrow"};
+                       highlightStyle: "tomorrow",
+                       ratio: "16:9"};
         var renderMath = function() {
             renderMathInElement(document.body, {delimiters: [
                 {left: "$$", right: "$$", display: true},
